--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,4 +2,5 @@ $pink : deeppink;
 $lightpink : pink;
 $green: rgb(56.5%, 93.3%, 56.5%);
 $blue: rgb(11.8%, 56.5%, 100%);
-$grey: rgb(71.8%, 71.8%, 71.8%)
+$grey: rgb(71.8%, 71.8%, 71.8%);
+$midgrey: rgb(58.9%, 58.9%, 58.9%);
