--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,31 @@
 @import "fonts";
 @import "animations";
 
+body{
+    height: 100%;
+}
+
+.links {
+    position: fixed;
+    display: flex;
+    align-items: flex-end;
+    bottom: 0;
+    right: 0;
+    .icon {
+        cursor: pointer;
+        height: auto;
+        width: 45px;
+        padding: 3px;
+        border-bottom: solid white 3px;
+        margin-top: 10px;
+        margin-right: 15px;
+        &:hover{
+            border-bottom: solid $accent 3px;
+        }
+    }
+}
+
+
 .titleContainer{
     /*height: 30vh;*/
     margin: 0;
@@ -32,6 +57,14 @@
     }
 }
 
+.design{
+    color: black;
+    &:hover{
+        @include darken-color($accent);
+        cursor: default;
+    }
+}
+
 .infoContainer{
     display: flex;
     justify-content: center;
@@ -49,6 +82,8 @@
 }
 
 .aboutContainer {
+    font-family: 'Crimson Text', serif;
+    color: $almostblack;
     display: flex;
     justify-content: center;
     margin-top: 80px;
@@ -58,5 +93,11 @@
     .about{
         font-size: 2em;
         line-height: 1.5em;
+    }
+}
+
+@media all and (max-width: 1000px) {
+    .links{
+        flex-direction: column;
     }
 }
